# copilot-sdk-dnalang

./: .gitignore  .rgignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETE_DELIVERABLES_SUMMARY.md  COMPLETE_INTEGRATION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTING_DNALANG.md  DNALANG_INTEGRATION_GUIDE.md  GITHUB_CONTRIBUTION_READY.md  INTEGRATION_COMPLETE.md  NCLM_INTEGRATION_COMPLETE.md  NEXT_STEPS.md  OMEGA_MASTER_COMPLETE_INTEGRATION.md  OSIRIS_COMPLETE.md  OSIRIS_QUICKSTART.md  OSIRIS_README.md  PCRB_AUDIT.json  QUICK_START.md  README.md  RELEASE_NOTES.md  SUPPORT.md  WHAT_TO_DO_NEXT.md  aeterna_vup.json  copilot-instructions.md  deploy-aws.sh  dna_circuit_comparison.json  install-osiris.sh  justfile  next.config.ts  osiris_logs  package-lock.json  package.json  penteract_ghz_advantage.py  pnpm-lock.yaml  pnpm-workspace.yaml  propulsion_engine_fixed.py  (+11 more)
dnalang/: CONTRIBUTING.md  INTEGRATION_SUMMARY.md  README.md  activate.sh  pyproject.toml  quantum_ledger.db  requirements.txt  setup.py  setup_venv.sh
dnalang/.osiris/: v11_forensic.jsonl
dnalang/docs/: API.md  FULL_INTEGRATION_GUIDE.md  NCLM_INTEGRATION.md  OMEGA_INTEGRATION.md
dnalang/examples/: agent_constellation.py  braket_live_demo.py  braket_phi_threshold.py  braket_qpu_deploy.py  decoder_benchmark.py  organism_evolution.py  quick_start.py  self_repair_demo.py
dnalang/experiments/: __init__.py  concordance_analyzer.py  sensitivity_analyzer.py  ttes_circuit.py
dnalang/mcp-server/: nclm_mcp_server.py
dnalang/src/dnalang_sdk/: __init__.py  cli.py  client.py  code_writer.py  config.py  consciousness.py  dev_swarm.py  gemini_provider.py  intent_engine.py  lambda_phi.py  nclm_provider.py  omega_engine.py  omega_integration.py  organisms_compiler.py  osiris_bootstrap.py  physics_tools.py  project_manager.py  quantum.py  recruitment_engine.py  repl.py  self_repair.py  social_agents.py  swarm_collective.py  swarm_organism.py  tools.py
dnalang/src/dnalang_sdk/adapters/: __init__.py  braket_adapter.py
dnalang/tests/: conftest.py  test_adapters_providers.py  test_compiler.py  test_concordance_analyzer.py  test_config_client.py  test_consciousness_lambda.py  test_core.py  test_imports.py  test_intent_compiler.py  test_new_modules.py  test_phi_threshold.py  test_project_physics.py  test_qpu_deploy.py  test_self_repair.py  test_sensitivity_analyzer.py  test_swarm_social.py  test_tools_quantum.py
dnalang/tests/osiris/: test_bridge_cli.py  test_nonlocal_agent.py  test_penteract_singularity.py  test_swarm_orchestrator.py
(+642 files in other folders)
